--- a/Junior/Module07/index.html
+++ b/Junior/Module07/index.html
@@ -13,7 +13,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="Junior/Module07/src/css/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -123,7 +123,7 @@
     </div>
   </div>
 
-  <script src="Junior/Module07/src/css"></script>
+  <script src="main.js"></script>
 </body>
 
 </html>
