--- a/Newbie/Module09/index.html
+++ b/Newbie/Module09/index.html
@@ -1,55 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- displays site properly based on user's device -->
+    <title>Profile Card Component</title>
 
-  <title>Profile Card Component</title>
+    <!-- Icon -->
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="assets/images/favicon-32x32.png"
+    />
 
-  <!-- Icon -->
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
+    <!-- Google Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
 
-  <!-- Google Font -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="./src/css/style.css" />
+  </head>
 
-  <!-- Custom CSS -->
-  <link rel="stylesheet" href="assets/css/style.css">
-</head>
+  <body>
+    <div class="card">
+      <header>
+        <img
+          class="card_pattern"
+          src="./assets/svg/bg-pattern-card.svg"
+          alt=""
+        />
+      </header>
 
-<body>
-  <div class="card">
-    <header>
-      <img class="card_pattern" src="assets/svg/bg-pattern-card.svg" alt="">
-    </header>
+      <main>
+        <img src="./assets/images/image-victor.jpg" alt="" />
+        <div class="title">
+          <h2>Victor Crest <span>26</span></h2>
+          <p>London</p>
+        </div>
+      </main>
 
-    <main>
-      <img src="assets/images/image-victor.jpg" alt="">
-      <div class="title">
-        <h2>Victor Crest <span>26</span> </h2>
-        <p>London</p>
-      </div>
-    </main>
-
-    <footer>
-      <div class="num">
-        <h2>80K</h2>
-        <p>Followers</p>
-      </div>
-      <div class="num">
-        <h2>803K</h2>
-        <p>Likes</p>
-      </div>
-      <div class="num">
-        <h2>1.4K</h2>
-        <p>Photos</p>
-      </div>
-    </footer>
-
-  </div>
-</body>
-
+      <footer>
+        <div class="num">
+          <h2>80K</h2>
+          <p>Followers</p>
+        </div>
+        <div class="num">
+          <h2>803K</h2>
+          <p>Likes</p>
+        </div>
+        <div class="num">
+          <h2>1.4K</h2>
+          <p>Photos</p>
+        </div>
+      </footer>
+    </div>
+  </body>
 </html>
