--- a/Newbie/Module09/index.html
+++ b/Newbie/Module09/index.html
@@ -12,7 +12,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="assets/images/favicon-32x32.png"
+      href="./images/favicon-32x32.png"
     />
 
     <!-- Google Font -->
@@ -30,15 +30,11 @@
   <body>
     <div class="card">
       <header>
-        <img
-          class="card_pattern"
-          src="./assets/svg/bg-pattern-card.svg"
-          alt=""
-        />
+        <img class="card_pattern" src="./svg/bg-pattern-card.svg" alt="" />
       </header>
 
       <main>
-        <img src="./assets/images/image-victor.jpg" alt="" />
+        <img src="./images/image-victor.jpg" alt="" />
         <div class="title">
           <h2>Victor Crest <span>26</span></h2>
           <p>London</p>
