--- a/Newbie/Module09/index.html
+++ b/Newbie/Module09/index.html
@@ -24,13 +24,13 @@
     />
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="./src/css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
 
   <body>
     <div class="card">
       <header>
-        <img class="card_pattern" src="./svg/bg-pattern-card.svg" alt="" />
+        <img class="card_pattern" src="./images/bg-pattern-card.svg" alt="" />
       </header>
 
       <main>
