--- a/Newbie/Module09/index.html
+++ b/Newbie/Module09/index.html
@@ -24,7 +24,7 @@
     />
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
