--- a/Junior/Module13/index.html
+++ b/Junior/Module13/index.html
@@ -1,176 +1,344 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Crowdfunding Product Page</title>
+    <link rel="shortcut icon" type="icon/png" href="favicon-32x32.png" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Commissioner:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- displays site properly based on user's device -->
-
-  <title>Crowdfunding Product Page</title>
-
-  <!-- Icon -->
-  <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
-
-  <!-- Custom CSS -->
-  <link rel="stylesheet" href="src/css/style.css">
-</head>
-
-<body>
-  <nav class="nav">
-    <div class="wrapper">
-      <div class="logo">
-        <img src="./images/logo.svg" alt="logo">
-      </div>
-
-      <div class="icon">
-        <img id="icon" src="./images/icon-hamburger.svg" alt="Hamburger">
-      </div>
-    </div>
-
-    <div class="dropdown hide">
-      <p>About</p>
-      <p>Discover</p>
-      <p>Get Started</p>
-    </div>
-  </nav>
-  <main class="main">
-    <section class="top">
-      <div class="brand">
-        <img src="./images/logo-mastercraft.svg" alt="">
-      </div>
-
-      <p>Mastercraft Bamboo Monitor Riser</p>
-
-      <p>A beautiful & handcrafted monitor stand to reduce neck and eye strain.</p>
-
-      <div class="btn-book">
-        <button>Back this project</button>
-
-        <div id="bookmark">
-          <svg width="56" height="56" xmlns="http://www.w3.org/2000/svg">
-            <g fill="none" fill-rule="evenodd">
-              <circle fill="#2F2F2F" cx="28" cy="28" r="28" />
-              <path fill="#B1B1B1" d="M23 19v18l5-5.058L33 37V19z" />
+  <body>
+    <main>
+      <header>
+        <div class="menu">
+          <img src="./images/logo.svg" alt="Crowdfund Logo" id="logo" />
+          <svg width="16" height="15" id="openNav" class="navToggle active">
+            <g fill="#FFF" fill-rule="evenodd">
+              <path d="M0 0h16v3H0zM0 6h16v3H0zM0 12h16v3H0z" />
             </g>
           </svg>
+          <svg width="14" height="15" id="closeNav" class="navToggle">
+            <g fill="#FFF" fill-rule="evenodd">
+              <path d="M2.404.782l11.314 11.314-2.122 2.122L.282 2.904z" />
+              <path d="M.282 12.096L11.596.782l2.122 2.122L2.404 14.218z" />
+            </g>
+          </svg>
+          <nav id="desktopNav">
+            <a href="">About</a>
+            <a href="">Discover</a>
+            <a href="">Get Started</a>
+          </nav>
         </div>
-      </div>
-    </section>
-
-    <section class="middle">
-      <div class="info">
-        <p>$89,914</p>
-        <p>of $100,000 backed</p>
-      </div>
-
-      <div class="info">
-        <p>5,007 </p>
-        <p>total backers</p>
-      </div>
-
-      <div class="info">
-        <p>56</p>
-        <p>days left</p>
-      </div>
-    </section>
-
-    <section class="bottom">
-      <div class="about">
-        <p>About this project</p>
+      </header>
+      <section id="intro">
+        <img src="./images/logo-mastercraft.svg" alt="Mastercraft Logo" />
+        <h1>Mastercraft Bamboo Monitor Riser</h1>
         <p>
-          The Mastercraft Bamboo Monitor Riser is a sturdy and stylish platform that elevates your screen
-          to a more comfortable viewing height. Placing your monitor at eye level has the potential to improve
-          your posture and make you more comfortable while at work, helping you stay focused on the task at hand.
+          A beautiful & handcrafted monitor stand to reduce neck and eye strain.
+        </p>
+        <div class="buttonRow">
+          <button>Back this project</button>
+          <div id="bookmark">
+            <svg width="56" height="56">
+              <g fill="none" fill-rule="evenodd">
+                <circle fill="hsl(0, 0%, 10%)" cx="28" cy="28" r="28" />
+                <path fill="hsl(0, 0%, 100%)" d="M23 19v18l5-5.058L33 37V19z" />
+              </g>
+            </svg>
+            <p>Bookmark</p>
+          </div>
+        </div>
+      </section>
+      <section id="numbers">
+        <div class="container">
+          <div id="stats">
+            <div class="stat">
+              <h2>$<span id="totalRaised">37,580</span></h2>
+              <p>of $100,000 backed</p>
+            </div>
+            <div class="stat">
+              <h2 id="totalBackers">5,007</h2>
+              <p>total backers</p>
+            </div>
+            <div class="stat">
+              <h2 id="daysLeft">56</h2>
+              <p>days left</p>
+            </div>
+          </div>
+          <div id="progressBar">
+            <div></div>
+          </div>
+        </div>
+      </section>
+      <section id="about">
+        <h3>About this project</h3>
+        <p>
+          The Mastercraft Bamboo Monitor Riser is a sturdy and stylish platform
+          that elevates your screen to a more comfortable viewing height.
+          Placing your monitor at eye level has the potential to improve your
+          posture and make you more comfortable while at work, helping you stay
+          focused on the task at hand.
         </p>
         <p>
-          Featuring artisan craftsmanship, the simplicity of design creates extra desk space below your computer
-          to allow notepads, pens, and USB sticks to be stored under the stand.
+          Featuring artisan craftsmanship, the simplicity of design creates
+          extra desk space below your computer to allow notepads, pens, and USB
+          sticks to be stored under the stand.
         </p>
-      </div>
+        <div class="option bamboo">
+          <div class="optionTitle">
+            <h4>Bamboo Stand</h4>
+            <h5>Pledge $25 or more</h5>
+          </div>
+          <p>
+            You get an ergonomic stand made of natural bamboo. You've helped us
+            launch our promotional campaign, and you’ll be added to a special
+            Backer member list.
+          </p>
+          <div class="stockRow">
+            <div class="stock">
+              <h6>101</h6>
+              <span>left</span>
+            </div>
+            <button class="specific" id="button1">Select Reward</button>
+          </div>
+        </div>
+        <div class="option black">
+          <div class="optionTitle">
+            <h4>Black Edition Stand</h4>
+            <h5>Pledge $75 or more</h5>
+          </div>
+          <p>
+            You get a Black Special Edition computer stand and a personal thank
+            you. You’ll be added to our Backer member list. Shipping is
+            included.
+          </p>
+          <div class="stockRow">
+            <div class="stock">
+              <h6>64</h6>
+              <span>left</span>
+            </div>
+            <button class="specific" id="button2">Select Reward</button>
+          </div>
+        </div>
+        <div class="option mahogany">
+          <div class="optionTitle">
+            <h4>Mahogany Special Edition</h4>
+            <h5>Pledge $200 or more</h5>
+          </div>
+          <p>
+            You get two Special Edition Mahogany stands, a Backer T-Shirt, and a
+            personal thank you. You’ll be added to our Backer member list.
+            Shipping is included.
+          </p>
+          <div class="stockRow">
+            <div class="stock">
+              <h6>0</h6>
+              <span>left</span>
+            </div>
+            <button class="specific" id="button3">Select Reward</button>
+          </div>
+        </div>
+      </section>
+    </main>
+    <div id="overlay"></div>
+    <nav id="mobileNav">
+      <a href="">About</a>
+      <a href="">Discover</a>
+      <a href="">Get Started</a>
+    </nav>
+    <section id="modal">
+      <svg width="15" height="15" id="closeModal">
+        <path
+          d="M11.314 0l2.828 2.828L9.9 7.071l4.243 4.243-2.828 2.828L7.07 9.9l-4.243 4.243L0 11.314 4.242 7.07 0 2.828 2.828 0l4.243 4.242L11.314 0z"
+          fill="#000"
+          fill-rule="evenodd"
+          opacity=".4"
+        />
+      </svg>
+      <h3>Back this project</h3>
+      <p>
+        Want to support us in bringing Mastercraft Bamboo Monitor Riser out in
+        the world?
+      </p>
+      <form action="" novalidate>
+        <div class="selection option">
+          <div class="select">
+            <input
+              type="radio"
+              name="selection"
+              value="noReward"
+              id="noReward"
+            />
+            <label for="noReward">
+              <div class="radioCircle"></div>
+              <div class="details">
+                <h4>Pledge with no reward</h4>
+              </div>
+            </label>
+          </div>
+          <p>
+            Choose to support us without a reward if you simply believe in our
+            project. As a backer, you will be signed up to receive product
+            updates via email.
+          </p>
+          <div class="pledge">
+            <p>Enter your pledge</p>
+            <div class="amount">
+              <div>
+                <input
+                  type="text"
+                  name="pledge"
+                  id="option1"
+                  placeholder="0.00"
+                />
+              </div>
+              <button type="submit">Continue</button>
+            </div>
+          </div>
+        </div>
+        <div class="selection option bamboo">
+          <div class="select">
+            <input type="radio" name="selection" value="bamboo" id="bamboo" />
+            <label for="bamboo">
+              <div class="radioCircle"></div>
+              <div class="details">
+                <h4>Bamboo Stand</h4>
+                <h5>Pledge $25 or more</h5>
+              </div>
+            </label>
+            <div class="stock desktopStock">
+              <h6>101</h6>
+              <span>left</span>
+            </div>
+          </div>
+          <p>
+            You get an ergonomic stand made of natural bamboo. You've helped us
+            launch our promotional campaign, and you’ll be added to a special
+            Backer member list.
+          </p>
+          <div class="stock mobileStock">
+            <h6>101</h6>
+            <span>left</span>
+          </div>
+          <div class="pledge">
+            <p>Enter your pledge</p>
+            <div class="amount">
+              <div>
+                <input
+                  type="text"
+                  name="pledge"
+                  id="option2"
+                  placeholder="0.00"
+                />
+              </div>
+              <button type="submit">Continue</button>
+            </div>
+          </div>
+        </div>
+        <div class="selection option black">
+          <div class="select">
+            <input type="radio" name="selection" value="black" id="black" />
+            <label for="black">
+              <div class="radioCircle"></div>
+              <div class="details">
+                <h4>Black Edition Stand</h4>
+                <h5>Pledge $75 or more</h5>
+              </div>
+            </label>
+            <div class="stock desktopStock">
+              <h6>64</h6>
+              <span>left</span>
+            </div>
+          </div>
+          <p>
+            You get a Black Special Edition computer stand and a personal thank
+            you. You’ll be added to our Backer member list. Shipping is
+            included.
+          </p>
+          <div class="stock mobileStock">
+            <h6>64</h6>
+            <span>left</span>
+          </div>
+          <div class="pledge">
+            <p>Enter your pledge</p>
+            <div class="amount">
+              <div>
+                <input
+                  type="text"
+                  name="pledge"
+                  id="option3"
+                  placeholder="0.00"
+                />
+              </div>
+              <button type="submit">Continue</button>
+            </div>
+          </div>
+        </div>
+        <div class="selection option mahogany">
+          <div class="select">
+            <input
+              type="radio"
+              name="selection"
+              value="mahogany"
+              id="mahogany"
+            />
+            <label for="mahogany">
+              <div class="radioCircle"></div>
+              <div class="details">
+                <h4>Mahogany Special Edition</h4>
+                <h5>Pledge $200 or more</h5>
+              </div>
+            </label>
+            <div class="stock desktopStock">
+              <h6>2</h6>
+              <span>left</span>
+            </div>
+          </div>
+          <p>
+            You get two Special Edition Mahogany stands, a Backer T-Shirt, and a
+            personal thank you. You’ll be added to our Backer member list.
+            Shipping is included.
+          </p>
+          <div class="stock mobileStock">
+            <h6>2</h6>
+            <span>left</span>
+          </div>
+          <div class="pledge">
+            <p>Enter your pledge</p>
+            <div class="amount">
+              <div>
+                <input
+                  type="text"
+                  name="pledge"
+                  id="option4"
+                  placeholder="0.00"
+                />
+              </div>
+              <button type="submit">Continue</button>
+            </div>
+          </div>
+        </div>
+      </form>
     </section>
-  </main>
-  <!--  
-
-
-  Bamboo Stand
-  Pledge $25 or more
-  You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and
-  you’ll be added to a special Backer member list.
-  101 left
-  Select Reward
-
-  Black Edition Stand
-  Pledge $75 or more
-  You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer
-  member list. Shipping is included.
-  64 left
-  Select Reward
-
-  Mahogany Special Edition
-  Pledge $200 or more
-  You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added
-  to our Backer member list. Shipping is included.
-  0 left
-  Out of Stock -->
-
-  <!-- Selection modal start -->
-
-  <!-- Back this project
-  Want to support us in bringing Mastercraft Bamboo Monitor Riser out in the world?
-
-  Pledge with no reward
-  Choose to support us without a reward if you simply believe in our project. As a backer,
-  you will be signed up to receive product updates via email.
-
-  Bamboo Stand
-  Pledge $25 or more
-  You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and
-  you’ll be added to a special Backer member list.
-  101 left -->
-
-  <!-- Selected pledge start -->
-  <!-- Enter your pledge
-  $25
-  Continue -->
-  <!-- Selected pledge end -->
-
-  <!-- Black Edition Stand
-  Pledge $75 or more
-  You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer
-  member list. Shipping is included.
-  64 left -->
-
-  <!-- Selected pledge start -->
-  <!-- Enter your pledge
-  $75
-  Continue -->
-  <!-- Selected pledge end -->
-
-  <!-- Mahogany Special Edition
-  Pledge $200 or more
-  You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added
-  to our Backer member list. Shipping is included.
-  0 left -->
-
-  <!-- Selected pledge  start -->
-  <!-- Enter your pledge
-  $200
-  Continue -->
-  <!-- Selected pledge end -->
-
-  <!-- Selection modal end -->
-
-  <!-- Success modal start -->
-
-  <!-- Thanks for your support!
-  Your pledge brings us one step closer to sharing Mastercraft Bamboo Monitor Riser worldwide. You will get
-  an email once our campaign is completed.
-  Got it! -->
-
-  <!-- Success modal end -->
-</body>
-
-<script src="src/js/main.js"></script>
-
+    <div id="confirmation">
+      <section>
+        <img src="./images/icon-check.svg" alt="Thank you" />
+        <h3>Thanks for your support!</h3>
+        <p>
+          Your pledge brings us one step closer to sharing Mastercraft Bamboo
+          Monitor Riser worldwide. You will get an email once our campaign is
+          completed.
+        </p>
+        <button>Got it!</button>
+      </section>
+    </div>
+  </body>
+  <script src="main.js"></script>
 </html>
